frontend/src/index.css
:root {
  /* Colors */
  --color-primary: #e1c0f6;
  --color-primary-light: #f0e0ff;
  --color-secondary: #e5bb83;
  --color-secondary-light: #efd1a9;
  --color-text-black: #222;
  --color-text-white: #fff;
  --color-background: #fff;
  --color-background-gray: #edebeb;
  --color-muted: #0d0b1594;

  /* Skeleton Colors */
  --color-secondary-skeleton-base: #cf9f60;
  --color-secondary-skeleton-highlight: #efd1a9;

  /* Borders */
  --border-radius-md: 4px;
  --border-radius-sm: 2px;
  --gap: 12px;
  --padding: 8px;
  --transition-fast: 0.15s;

  /* Font */
  --font-body: 1rem "Roboto Variable", sans-serif;
  --font-title: 1rem "Montserrat Variable", sans-serif;
  --font-size-sm: 0.875rem;
  --font-size-base: 1rem;
  --font-weight-bold: 600;

  /* Spacing */
  --padding-sm: 0.5rem;
  --padding-md: 1rem;

  /* Shadows */
  --box-shadow-sm: 0 4px rgba(0, 0, 0, 0.25);
  --box-shadow-md: 0 8px rgba(0, 0, 0, 0.25);

  --topbar-height: 52px;
  --button-size: 50px;
  --z-index-topbar: 1000;

  /* border */
  --border-sm: 1px solid var(--color-text-black);
  --border-md: 2px solid var(--color-text-black);
}

body {
  font: var(--font-body);
  color: var(--color-text-black);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font: unset;
}

.button-icon {
  background: transparent;
  border: none;
  padding: 0;
  cursor: pointer;
}

.no-data {
  opacity: 0.75;
  font-style: italic;
}

